--- a/src/app/stepper-control/stepper-control.component.html
+++ b/src/app/stepper-control/stepper-control.component.html
@@ -1,11 +1,13 @@
-<mat-vertical-stepper>
-    <mat-step label="Selecciona que materias queres cursar cursar">
-      Content 1
+<mat-vertical-stepper labelPosition="bottom" linear="true">
+    <mat-step label="Selecciona que materias queres cursar">
+      <app-seleccionador-de-materias>
+        
+      </app-seleccionador-de-materias>
     </mat-step>
-    <mat-step label="Seleccciona a cuales comisiones quisieras ir">
+    <mat-step label="Seleccciona a cuáles comisiones quisieras ir">
       Content 2
     </mat-step>
     <mat-step label="Ajusta tu elección">
-        Content 2
-      </mat-step>
-  </mat-vertical-stepper>
+      Content 3
+    </mat-step>
+</mat-vertical-stepper>
