--- a/src/app/buscador-de-materias/buscador-de-materias.component.html
+++ b/src/app/buscador-de-materias/buscador-de-materias.component.html
@@ -1,10 +1,10 @@
-<mat-form-field class="add-materia-input" appearance="legacy">
-    <mat-label>Agregar materia</mat-label>
-    <input #searchBox matInput placeholder="Placeholder" (input)="search(searchBox.value)">
-    <ul class="search-result">
-        <li *ngFor="let materia of materias$ | async" >
-            {{materia.nombre}} - {{materia.codigo}}
-        </li>
-    </ul>
-
-</mat-form-field>
+<form class="example-form">
+    <mat-form-field class="example-full-width">
+      <input type="text" placeholder="Pick one" aria-label="Number" matInput [formControl]="myControl" [matAutocomplete]="auto">
+      <mat-autocomplete #auto="matAutocomplete">
+        <mat-option *ngFor="let option of filteredOptions | async" [value]="option.nombre">
+          {{option.nombre}} - {{option.codigo}}
+        </mat-option>
+      </mat-autocomplete>
+    </mat-form-field>
+  </form>
