--- a/src/app/tabla-de-materias/tabla-de-materias.component.html
+++ b/src/app/tabla-de-materias/tabla-de-materias.component.html
@@ -8,16 +8,19 @@
     <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef> Name </th>
         <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        <td mat-footer-cell *matFooterCellDef> <app-buscador-de-materias></app-buscador-de-materias> </td>
     </ng-container>
 
     <!-- Position Column -->
     <ng-container matColumnDef="code">
         <th mat-header-cell *matHeaderCellDef> Código </th>
         <td mat-cell *matCellDef="let element"> {{element.code}} </td>
+        <td mat-footer-cell *matFooterCellDef>  </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
 </table>
           
           
