--- a/src/app/buscador-de-materias/buscador-de-materias.component.html
+++ b/src/app/buscador-de-materias/buscador-de-materias.component.html
@@ -1,8 +1,8 @@
 <form class="example-form">
     <mat-form-field class="example-full-width">
-      <input type="text" placeholder="Pick one" aria-label="Number" matInput [formControl]="myControl" [matAutocomplete]="auto">
+      <input type="text" placeholder="Agregar materia" aria-label="Number" matInput [formControl]="myControl" [matAutocomplete]="auto">
       <mat-autocomplete #auto="matAutocomplete">
-        <mat-option *ngFor="let option of filteredOptions | async" [value]="option.nombre">
+        <mat-option *ngFor="let option of filteredOptions | async" [value]="option.nombre" (click)="optionSelected(option)">
           {{option.nombre}} - {{option.codigo}}
         </mat-option>
       </mat-autocomplete>
