--- a/src/app/tabla-de-materias/tabla-de-materias.component.html
+++ b/src/app/tabla-de-materias/tabla-de-materias.component.html
@@ -6,15 +6,15 @@
 
     <!-- Name Column -->
     <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Name </th>
-        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-        <td mat-footer-cell *matFooterCellDef> <app-buscador-de-materias></app-buscador-de-materias> </td>
+        <th mat-header-cell *matHeaderCellDef> Nombre </th>
+        <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
+        <td mat-footer-cell *matFooterCellDef> <app-buscador-de-materias (onOptionSelected)="addMateria($event)"></app-buscador-de-materias> </td>
     </ng-container>
 
     <!-- Position Column -->
     <ng-container matColumnDef="code">
         <th mat-header-cell *matHeaderCellDef> Código </th>
-        <td mat-cell *matCellDef="let element"> {{element.code}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.codigo}} </td>
         <td mat-footer-cell *matFooterCellDef>  </td>
     </ng-container>
 
