se sigue agregando la prueba basica de tabla

--- a/src/app/stepper-control/stepper-control.component.html
+++ b/src/app/stepper-control/stepper-control.component.html
@@ -5,7 +5,7 @@
       </app-seleccionador-de-materias>
     </mat-step>
     <mat-step label="Seleccciona a cuáles comisiones quisieras ir">
-      Content 2
+      <app-seleccionador-de-comisiones></app-seleccionador-de-comisiones>
     </mat-step>
     <mat-step label="Ajusta tu elección">
       Content 3
