--- a/src/app/tabla-de-materias/tabla-de-materias.component.html
+++ b/src/app/tabla-de-materias/tabla-de-materias.component.html
@@ -1,3 +1,5 @@
+
+
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
     <!--- Note that these columns can be defined in any order.
@@ -7,14 +9,14 @@
     <!-- Name Column -->
     <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef> Nombre </th>
-        <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
+        <td mat-cell *matCellDef="let element" (click)="removeMateria(element)"> {{element.nombre}} </td>
         <td mat-footer-cell *matFooterCellDef> <app-buscador-de-materias (onOptionSelected)="addMateria($event)"></app-buscador-de-materias> </td>
     </ng-container>
 
     <!-- Position Column -->
     <ng-container matColumnDef="code">
         <th mat-header-cell *matHeaderCellDef> Código </th>
-        <td mat-cell *matCellDef="let element"> {{element.codigo}} </td>
+        <td mat-cell *matCellDef="let element" (click)="removeMateria(element)"> {{element.codigo}} </td>
         <td mat-footer-cell *matFooterCellDef>  </td>
     </ng-container>
 
