--- a/src/app/seleccionador-de-comisiones/seleccionador-de-comisiones.component.html
+++ b/src/app/seleccionador-de-comisiones/seleccionador-de-comisiones.component.html
@@ -1,19 +1,13 @@
-<div fxLayout="column" fxLayoutAlign="space-around stretch" fxFill>
-  <mat-card *ngFor="let materia of materias.value" class="example-card" fxFlex="0 1 90">
-    <mat-card-header>
-      <mat-card-title>
+<mat-accordion fxFlex="0 1 90" fxLayout="column">
+  <mat-expansion-panel *ngFor="let materia of materias.value" class="example-card">
+    <mat-expansion-panel-header>
+      <mat-panel-title>
         {{materia.nombre}} - {{materia.codigo}}
-      </mat-card-title>
-      <mat-card-content>
-        <mat-form-field>
-          <mat-label>Comisión A</mat-label>
-          <select matNativeControl required>
-            <option value="volvo">Comision A</option>
-            <option value="saab">Comision B</option>
-            <option value="mercedes">Comision C</option>
-          </select>
-        </mat-form-field>
-      </mat-card-content>
-    </mat-card-header>
-  </mat-card>
-</div>
+      </mat-panel-title>
+      <mat-panel-description>
+        Seleccionar comisiones
+      </mat-panel-description>
+    </mat-expansion-panel-header>
+
+  </mat-expansion-panel>
+</mat-accordion>
