agrego test03 hasta el momento[

--- a/src/app/seleccionador-de-comisiones/seleccionador-de-comisiones.component.html
+++ b/src/app/seleccionador-de-comisiones/seleccionador-de-comisiones.component.html
@@ -5,9 +5,11 @@
         {{materia.nombre}} - {{materia.codigo}}
       </mat-panel-title>
       <mat-panel-description>
-        Seleccionar comisiones
       </mat-panel-description>
     </mat-expansion-panel-header>
 
+    <app-drag-comisiones>
+      
+    </app-drag-comisiones>
   </mat-expansion-panel>
 </mat-accordion>
